yaml/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nuxt3-test
  name: nuxt3-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nuxt3-test
  strategy: {}
  template:
    metadata:
      labels:
        app: nuxt3-test
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - image: localhost:5000/nuxt3-test:latest
          name: nuxt3-test
          resources: {}
          volumeMounts:
            - name: uploads
              mountPath: /uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: nfs-pvc
status: {}
