yaml/svc-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nuxt3-test
  name: nuxt3-nodeport-test
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
      nodePort: 30080
  selector:
    app: nuxt3-test
status:
  loadBalancer: {}
