yaml/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nuxt3-test
  name: nuxt3-test
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: nuxt3-test
  type: ClusterIP
status:
  loadBalancer: {}
